# Steam_Game_Recommendation

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
cfg/: config.yaml
notebooks/: step2.1_Data_Cleaning_Feature_Engineering.ipynb  step2.2Web scraping.ipynb
src/: export_to_BQ.py
src/utils/: setup_logger.py
